src/parser/iidbParser.py
# Generated from src/parser/iidb.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class iidbParser ( Parser ):

    grammarFileName = "iidb.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'.'", "'('", "')'", "'='", "'!='", 
                     "'<'", "'>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ADD", "AND", "CONDITION", "DATE", "TO", 
                      "WHERE", "IDENTIFIER", "NUMERIC_LITERAL", "STRING_LITERAL", 
                      "SPACES", "UNEXPECTED_CHAR" ]

    RULE_parse = 0
    RULE_error = 1
    RULE_isql_stmt_list = 2
    RULE_isql_stmt = 3
    RULE_add_condition_stmt = 4
    RULE_table_name = 5
    RULE_database_name = 6
    RULE_column_name = 7
    RULE_any_name = 8
    RULE_expr = 9
    RULE_date_function = 10

    ruleNames =  [ "parse", "error", "isql_stmt_list", "isql_stmt", "add_condition_stmt", 
                   "table_name", "database_name", "column_name", "any_name", 
                   "expr", "date_function" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    ADD=9
    AND=10
    CONDITION=11
    DATE=12
    TO=13
    WHERE=14
    IDENTIFIER=15
    NUMERIC_LITERAL=16
    STRING_LITERAL=17
    SPACES=18
    UNEXPECTED_CHAR=19

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ParseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(iidbParser.EOF, 0)

        def isql_stmt_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(iidbParser.Isql_stmt_listContext)
            else:
                return self.getTypedRuleContext(iidbParser.Isql_stmt_listContext,i)


        def error(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(iidbParser.ErrorContext)
            else:
                return self.getTypedRuleContext(iidbParser.ErrorContext,i)


        def getRuleIndex(self):
            return iidbParser.RULE_parse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParse" ):
                listener.enterParse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParse" ):
                listener.exitParse(self)




    def parse(self):

        localctx = iidbParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << iidbParser.T__0) | (1 << iidbParser.ADD) | (1 << iidbParser.UNEXPECTED_CHAR))) != 0):
                self.state = 24
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [iidbParser.T__0, iidbParser.ADD]:
                    self.state = 22
                    self.isql_stmt_list()
                    pass
                elif token in [iidbParser.UNEXPECTED_CHAR]:
                    self.state = 23
                    self.error()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 28
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 29
            self.match(iidbParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ErrorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UNEXPECTED_CHAR(self):
            return self.getToken(iidbParser.UNEXPECTED_CHAR, 0)

        def getRuleIndex(self):
            return iidbParser.RULE_error

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterError" ):
                listener.enterError(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitError" ):
                listener.exitError(self)




    def error(self):

        localctx = iidbParser.ErrorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_error)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.match(iidbParser.UNEXPECTED_CHAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Isql_stmt_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def isql_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(iidbParser.Isql_stmtContext)
            else:
                return self.getTypedRuleContext(iidbParser.Isql_stmtContext,i)


        def getRuleIndex(self):
            return iidbParser.RULE_isql_stmt_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIsql_stmt_list" ):
                listener.enterIsql_stmt_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIsql_stmt_list" ):
                listener.exitIsql_stmt_list(self)




    def isql_stmt_list(self):

        localctx = iidbParser.Isql_stmt_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_isql_stmt_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==iidbParser.T__0:
                self.state = 33
                self.match(iidbParser.T__0)
                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 39
            self.isql_stmt()
            self.state = 48
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 41 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 40
                        self.match(iidbParser.T__0)
                        self.state = 43 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==iidbParser.T__0):
                            break

                    self.state = 45
                    self.isql_stmt() 
                self.state = 50
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 54
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 51
                    self.match(iidbParser.T__0) 
                self.state = 56
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Isql_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def add_condition_stmt(self):
            return self.getTypedRuleContext(iidbParser.Add_condition_stmtContext,0)


        def getRuleIndex(self):
            return iidbParser.RULE_isql_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIsql_stmt" ):
                listener.enterIsql_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIsql_stmt" ):
                listener.exitIsql_stmt(self)




    def isql_stmt(self):

        localctx = iidbParser.Isql_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_isql_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.add_condition_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Add_condition_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ADD(self):
            return self.getToken(iidbParser.ADD, 0)

        def any_name(self):
            return self.getTypedRuleContext(iidbParser.Any_nameContext,0)


        def TO(self):
            return self.getToken(iidbParser.TO, 0)

        def table_name(self):
            return self.getTypedRuleContext(iidbParser.Table_nameContext,0)


        def column_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(iidbParser.Column_nameContext)
            else:
                return self.getTypedRuleContext(iidbParser.Column_nameContext,i)


        def CONDITION(self):
            return self.getToken(iidbParser.CONDITION, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(iidbParser.ExprContext)
            else:
                return self.getTypedRuleContext(iidbParser.ExprContext,i)


        def WHERE(self):
            return self.getToken(iidbParser.WHERE, 0)

        def database_name(self):
            return self.getTypedRuleContext(iidbParser.Database_nameContext,0)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(iidbParser.AND)
            else:
                return self.getToken(iidbParser.AND, i)

        def getRuleIndex(self):
            return iidbParser.RULE_add_condition_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdd_condition_stmt" ):
                listener.enterAdd_condition_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdd_condition_stmt" ):
                listener.exitAdd_condition_stmt(self)




    def add_condition_stmt(self):

        localctx = iidbParser.Add_condition_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_add_condition_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(iidbParser.ADD)
            self.state = 60
            self.any_name()
            self.state = 61
            self.match(iidbParser.TO)
            self.state = 65
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 62
                self.database_name()
                self.state = 63
                self.match(iidbParser.T__1)


            self.state = 67
            self.table_name()
            self.state = 68
            self.match(iidbParser.T__1)
            self.state = 69
            self.column_name()
            self.state = 70
            self.match(iidbParser.CONDITION)
            self.state = 71
            self.match(iidbParser.T__2)
            self.state = 72
            self.expr(0)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==iidbParser.AND:
                self.state = 73
                self.match(iidbParser.AND)
                self.state = 74
                self.expr(0)
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self.match(iidbParser.T__3)
            self.state = 81
            self.match(iidbParser.WHERE)
            self.state = 82
            self.column_name()
            self.state = 83
            self.match(iidbParser.T__4)
            self.state = 84
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Table_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def any_name(self):
            return self.getTypedRuleContext(iidbParser.Any_nameContext,0)


        def getRuleIndex(self):
            return iidbParser.RULE_table_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTable_name" ):
                listener.enterTable_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTable_name" ):
                listener.exitTable_name(self)




    def table_name(self):

        localctx = iidbParser.Table_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_table_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.any_name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Database_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def any_name(self):
            return self.getTypedRuleContext(iidbParser.Any_nameContext,0)


        def getRuleIndex(self):
            return iidbParser.RULE_database_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDatabase_name" ):
                listener.enterDatabase_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDatabase_name" ):
                listener.exitDatabase_name(self)




    def database_name(self):

        localctx = iidbParser.Database_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_database_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.any_name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Column_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def any_name(self):
            return self.getTypedRuleContext(iidbParser.Any_nameContext,0)


        def getRuleIndex(self):
            return iidbParser.RULE_column_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumn_name" ):
                listener.enterColumn_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumn_name" ):
                listener.exitColumn_name(self)




    def column_name(self):

        localctx = iidbParser.Column_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_column_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.any_name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Any_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(iidbParser.IDENTIFIER, 0)

        def STRING_LITERAL(self):
            return self.getToken(iidbParser.STRING_LITERAL, 0)

        def getRuleIndex(self):
            return iidbParser.RULE_any_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAny_name" ):
                listener.enterAny_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAny_name" ):
                listener.exitAny_name(self)




    def any_name(self):

        localctx = iidbParser.Any_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_any_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            _la = self._input.LA(1)
            if not(_la==iidbParser.IDENTIFIER or _la==iidbParser.STRING_LITERAL):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def any_name(self):
            return self.getTypedRuleContext(iidbParser.Any_nameContext,0)


        def date_function(self):
            return self.getTypedRuleContext(iidbParser.Date_functionContext,0)


        def NUMERIC_LITERAL(self):
            return self.getToken(iidbParser.NUMERIC_LITERAL, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(iidbParser.ExprContext)
            else:
                return self.getTypedRuleContext(iidbParser.ExprContext,i)


        def getRuleIndex(self):
            return iidbParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = iidbParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [iidbParser.IDENTIFIER, iidbParser.STRING_LITERAL]:
                self.state = 95
                self.any_name()
                pass
            elif token in [iidbParser.DATE]:
                self.state = 96
                self.date_function()
                pass
            elif token in [iidbParser.NUMERIC_LITERAL]:
                self.state = 97
                self.match(iidbParser.NUMERIC_LITERAL)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 105
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = iidbParser.ExprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                    self.state = 100
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 101
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << iidbParser.T__4) | (1 << iidbParser.T__5) | (1 << iidbParser.T__6) | (1 << iidbParser.T__7))) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 102
                    self.expr(3) 
                self.state = 107
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Date_functionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DATE(self):
            return self.getToken(iidbParser.DATE, 0)

        def STRING_LITERAL(self):
            return self.getToken(iidbParser.STRING_LITERAL, 0)

        def getRuleIndex(self):
            return iidbParser.RULE_date_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDate_function" ):
                listener.enterDate_function(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDate_function" ):
                listener.exitDate_function(self)




    def date_function(self):

        localctx = iidbParser.Date_functionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_date_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(iidbParser.DATE)
            self.state = 109
            self.match(iidbParser.T__2)
            self.state = 110
            self.match(iidbParser.STRING_LITERAL)
            self.state = 111
            self.match(iidbParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[9] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 2)
         




